added sitemap and robots.txt for SEO among other modifications to layout.tsx for SEO created generate-sitemap.cjs to generate sitemap added og-image.png for SEO

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "generate-sitemap": "node src/scripts/generate-sitemap.cjs",
     "start": "next start",
     "lint": "next lint"
   },
