--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.4",
+    "framer-motion": "^11.3.8",
     "next": "14.2.4",
     "node-fetch": "^2.7.0",
     "react": "^18",
