--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "generate-sitemap": "node src/scripts/generate-sitemap.cjs",
+    "generateVideoData": "cross-env NEXT_PUBLIC_YOUTUBE_CHANNEL_ID=UCDo54orpThDBi9R7WobzDGg NEXT_PUBLIC_YOUTUBE_API_KEY=AIzaSyCI-IaqGYTpOAoYohCVPmpoK42SpXADbsA node src/scripts/generateVideoData.cjs",
     "start": "next start",
     "lint": "next lint"
   },
@@ -25,6 +26,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-lazy-load-image-component": "^1.6.4",
+    "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
