--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "generate-sitemap": "node src/scripts/generate-sitemap.cjs",
     "generateVideoData": "cross-env NEXT_PUBLIC_YOUTUBE_CHANNEL_ID=channelid NEXT_PUBLIC_YOUTUBE_API_KEY=youtubeapikey node src/scripts/generateVideoData.cjs",
+    "uploadVideosBackend": "node src/scripts/uploadVideosBackend.cjs",
     "start": "next start",
     "lint": "next lint"
   },
