--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "node-fetch": "^2.7.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-lazy-load-image-component": "^1.6.2"
+    "react-hook-form": "^7.52.2",
+    "react-lazy-load-image-component": "^1.6.2",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/node": "^20",
