--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.4",
     "framer-motion": "^11.3.8",
+    "ioredis": "^5.4.1",
     "next": "14.2.4",
     "node-fetch": "^2.7.0",
     "react": "^18",
