--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.4",
+    "@mui/icons-material": "^5.16.7",
     "framer-motion": "^11.3.8",
     "ioredis": "^5.4.1",
     "next": "14.2.4",
@@ -23,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-icons": "^5.3.0",
     "react-lazy-load-image-component": "^1.6.2",
     "react-query": "^3.39.3",
     "react-responsive": "^10.0.0",
