--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.4",
     "@mui/icons-material": "^5.16.7",
+    "dompurify": "^3.1.6",
     "framer-motion": "^11.3.8",
     "ioredis": "^5.4.1",
     "next": "14.2.4",
@@ -31,6 +32,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/node-fetch": "^2.6.11",
     "@types/react": "^18",
