--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-lazy-load-image-component": "^1.6.2",
     "react-query": "^3.39.3",
     "react-responsive": "^10.0.0",
+    "sharp": "^0.33.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
