google tag component added to root layout

--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.4",
     "@mui/icons-material": "^5.16.7",
+    "@next/third-parties": "^14.2.7",
     "dompurify": "^3.1.6",
     "framer-motion": "^11.3.8",
     "ioredis": "^5.4.1",
-    "next": "14.2.4",
+    "next": "^14.2.7",
     "next-auth": "^5.0.0-beta.20",
     "node-fetch": "^2.7.0",
     "nookies": "^2.5.2",
