--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-query": "^3.39.3",
     "react-responsive": "^10.0.0",
     "sharp": "^0.33.5",
+    "sitemap": "^8.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
